[package]
name = "seed-reader"
version = "1.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = 'parity-scale-codec', default-features = false, version = '2.0.0', features = ['derive'] }
sp-core = { git = "https://github.com/zzm-Zhong/substrate.git", default-features = false, branch = "polkadot-v0.9.15-fix" }
sp-runtime = { git = "https://github.com/zzm-Zhong/substrate.git", default-features = false, branch = "polkadot-v0.9.15-fix" }
sp-std = { git = "https://github.com/zzm-Zhong/substrate.git", default-features = false, branch = "polkadot-v0.9.15-fix" }
sp-application-crypto = { git = "https://github.com/zzm-Zhong/substrate.git", default-features = false, branch = "polkadot-v0.9.15-fix" }
frame-support = { git = "https://github.com/zzm-Zhong/substrate.git", default-features = false, branch = "polkadot-v0.9.15-fix" }
frame-system = { git = "https://github.com/zzm-Zhong/substrate.git", default-features = false, branch = "polkadot-v0.9.15-fix" }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-core/std',
    'frame-support/std',
    'sp-runtime/std',
    'frame-system/std',
    'sp-application-crypto/std',
    'sp-std/std',
]
#try-runtime = ['frame-support/try-runtime']

