[package]
name = "patramaker"
version = "0.1.0"
authors = ["Patract Labs <tyler@patract.io>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }

ownership = { version = "0.1.0", git = "https://github.com/patractlabs/metis", default-features = false }
dai = { path = "dai", default-features = false, features = ["ink-as-dependency"] }

primitive-types = { version = "0.9.0", default-features = false, features = ["codec"] }

[lib]
name = "patramaker"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "ownership/std",
    "dai/std",
    "primitive-types/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false
