[package]
name = "pallet-kitties"
version = "3.0.0"
authors = ["xieshanfeng <shanfenggood@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
balances = { package = 'pallet-balances', version = '3.0.0', default-features = false }

#测试时用的如下
[dev-dependencies]
pallet-randomness-collective-flip = {version = "3.0.0"}
[features]
default = ['std']
std = [
    'balances/std',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "frame-benchmarking/std",
    "sp-io/std",
    "sp-runtime/std",
    "balances/std",
    "sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking"]