[package]
name = "runtime-common"
version = "0.9.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
impl-trait-for-tuples = "0.2.2"
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
log = { version = "0.4.13", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
static_assertions = "1.1.0"
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
pallet-staking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28" }

[dev-dependencies]
hex-literal = "0.3.4"
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
trie-db = "0.23.1"
serde_json = "1.0.78"
libsecp256k1 = "0.7.0"

[features]
default = ["std"]
no_std = []
std = [
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "sp-io/std",
    "sp-runtime/std",
    "parity-scale-codec/std",
    "pallet-authorship/std",
    "pallet-treasury/std",
    "sp-npos-elections/std",
    "pallet-staking/std",
    "pallet-transaction-payment/std",
    "pallet-election-provider-multi-phase/std"
]

runtime-benchmarks = [
    "libsecp256k1/hmac",
    "libsecp256k1/static-context",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]

try-runtime = [
    "pallet-staking/try-runtime",
    "pallet-transaction-payment/try-runtime",
]